# concise-mouse-consistency-cmc

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.cursor/rules/: github-best-practices.mdc
cmake/: Warnings.cmake
docs/: IMPLEMENTATION_PLAN.md  OBJECTIVES.md  PUBLISHING.md  SETUP_AND_BUILD.md  TECHNICAL_DESIGN.md  TEST_PLAN.md  research.md
include/MouseSensitivityFix/: Compatibility.h  Config.h  Hooks.h  Log.h  MenuFrameworkBridge.h  Plugin.h  StringViewLiteralsCompat.h
scripts/: commit-as-kexodus.ps1
src/: Log.cpp  Plugin.cpp  main.cpp
src/compat/: Compatibility.cpp
src/config/: Config.cpp
src/hooks/: Hooks.cpp
src/ui/: MenuFrameworkBridge.cpp
